--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,6 +11,7 @@ jobs:
     container:
       image: docker/compose:latest
     steps:
+      - uses: actions/checkout@v3
       - run: |
           chmod u+x build-run.sh
           ./build-run.sh
