--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,17 +1,45 @@
-name: build-deploy
+# This is a basic workflow to help you get started with Actions
 
+name: Build and deploy
+
+# Controls when the workflow will run
 on:
   push:
-    branches:
-      - 'master'
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  deploy_web:
-    runs-on: surcloud
-    container:
-      image: docker/compose:latest
+  build:
+    runs-on: self-hosted
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - run: |
-          chmod u+x build-run.sh
-          ./build-run.sh
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to registry.timosur.com
+        uses: docker/login-action@v2
+        with:
+          registry: registry.timosur.com
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      # Builds a Docker container image and pushes it to GitHub Packages
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: registry.timosur.com/portfolio:latest
+
+      # Deploys k8s.yaml to the cluster
+      # - name: Deploy to Kubernetes
+      #   uses: actions-hub/kubectl@master
+      #   with:
+      #     args: apply -f .ci/k8s.yaml
+      #   env:
+      #     KUBE_CONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
+
