--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "portfolio",
+  "name": "portolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.6",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.11.2",
-    "bootstrap": "^5.0.0-beta1",
-    "date-fns": "^2.16.1",
-    "graphql": "^15.4.0",
-    "graphql-tag": "^2.11.0",
-    "next": "^12.0.4",
-    "next-apollo": "^5.0.7",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-tsparticles": "^1.37.4",
-    "react-typed": "^1.2.0",
-    "sharp": "^0.27.0"
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.16",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "next": "13.4.12",
+    "postcss": "8.4.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-particles": "^2.11.0",
+    "tailwindcss": "3.3.3",
+    "tsparticles-slim": "^2.11.1",
+    "typed.js": "^2.0.16",
+    "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/typed.js": "^2.0.9"
   }
 }
